@@ -190,15 +190,14 @@ E.g. try ::
 Unicode
 -------
 
-The generated LaTeX documents are in latin1 encoding per default, if unicode
-characters are required one must set ``--output-encoding=utf-8`` install
-`LaTeX unicode`_ support and add::
+The generated LaTeX documents are in the input encoding per default. 
 
-    \usepackage{ucs}
-    \usepackage[utf8]{inputenc}
+If the source document is in utf-8 encoding (or
+``--output-encoding=utf-8`` is set), LaTeX needs unicode support
+(the ``ucs`` package). If this is not available, specify
+a different output-encoding, e.g. ``latin1``.
 
-to the stylesheet. If LaTeX issues a Warning about unloaded/known characters
-adding ::
+If LaTeX issues a Warning about unloaded/known characters adding ::
 
     \PreloadUnicodePage{n}
 
